# Indesign_PlugInSDK_cmake-template

./: CMakeLists.txt  ReadMe.md
cmake/: CopyResources.cmake  EnvVariables.cmake  MacOsFramework.cmake  PreBuild.cmake
source/: TriggerResourceDeps.cpp  myinfoplist.fr  myinfoplist.rc  myinfoplistActionComponent.cpp  myinfoplistFactoryList.h  myinfoplistID.cpp  myinfoplistID.h  myinfoplistNoStrip.cpp  myinfoplist_enUS.fr  myinfoplist_jaJP.fr
